@@ -1,3 +1,8 @@
+2007-09-05 Joerg Faschingbauer <joerg.faschingbauer@aon.at>
+
+	* BuildInfo_CIncludePath_NativeLocal does not carry any
+	  autoconfisms anymore.
+
 2007-09-01 Joerg Faschingbauer <joerg.faschingbauer@aon.at>
 
 	* merged from branches/RB-2.1 (last changed rev. 351 there):
